# zxpaint

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StarFish.cpp  StarFish.h  build.sh  common.cpp  common.h  conanfile.txt  entitlements  main.cpp  main.h  sonar-project.properties
.github/workflows/: build.yml  codeql-analysis.yml
cmake/: Findfmt.cmake  Findspdlog.cmake
ios/: Podfile
res/: convert.sh  iconsdown.xpm  iconsin.xpm  iconsink.xpm  iconsleft.xpm  iconsnothing.xpm  iconsoff.xpm  iconson.xpm  iconsout.xpm  iconsout2.xpm  iconspaper.xpm  iconsright.xpm  iconsup.xpm
src/: StarFish.cpp  StarFish.h  common.cpp  common.h  main.cpp  main.h
